United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6909153 Fix broken options on Zero
6909153 : Fix broken options on Zero

Details
Type:
Bug
Submit Date:
2009-12-10
Status:
Closed
Updated Date:
2012-10-08
Project Name:
JDK
Resolved Date:
2010-01-19
Component:
hotspot
OS:
generic
Sub-Component:
runtime
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs17
Fixed Versions:
hs17

Related Reports
Backport:
Backport:
Backport:

Sub Tasks

Description
Gary Benson wrote:

Hi all,

I've been doing a mini-audit of Zero to ensure it still works with
non-standard options.  This webrev:

  http://cr.openjdk.java.net/~gbenson/zero-options-fixes/

fixes the following issues:

  1. HotSpot would segfault with -XX:+CITime if the VM is built
     with no compilers.  The patch fixes this.
    
  2. The C++ interpreter doesn't support -XX:+ProfileInterpreter
     and -XX:+UseCompressedOops, and Zero doesn't support
     -XX:+TaggedStackInterpreter.  The patch disables these
     options in these configurations.

                                    

Comments
EVALUATION

yes
                                     
2010-01-04
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/40e7c1d24e4a
                                     
2010-01-04



Hardware and Software, Engineered to Work Together