6909153: Fix broken options on Zero

Smaller fixes to ensure that Zero still works with non-standard options.

Reviewed-by: twisti